HTMLにコンテンツを追加

--- a/佐田の作業用/shoin.html
+++ b/佐田の作業用/shoin.html
@@ -2,20 +2,19 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css"> <!-- スタイルシートへのリンク -->
+    <link rel="stylesheet" href="./css/styles.css"> <!-- スタイルシートへのリンク -->
     <script src="script.js" defer></script> <!-- スクリプトファイルへのリンク -->
 </head>
 <body>
     <header>
-        <h1>〇〇の出身校紹介ページ(作成者名)</h1>
-        <img src="../〇〇〇(画像ファイル名)" alt="学校の画像">
-        <h2>〇〇〇学校</h2>
+        <h1>中村慈蓮の出身校紹介ページ(作成者名)</h1>
+        <img style="width: 100%" src="./schoolImage.jpg" alt="学校の画像">
+        <h2>松陰高等学校</h2>
     </header>
     <main>
         <div class="schoolInformation">
-            <h3>特徴:○○○○</h3>
-            <h3>自分の所属していたクラス:〇年〇組</h3>
-            <h3>その他の紹介</h3>
+            <h3>自分の所属していたクラス:特になし</h3>
+            <h3>その他の紹介：<br>通信交であり人があまりいなかった一人で対面授業の日もしばしばバイク乗ってくる人もいたテストの前にテストと同じ内容のプリントがもらえる</h3>
         </div>
         <div>
             <h2>班員からのコメント</h2>
