自分のページ完成コミット

--- a/佐田の作業用/shoin.html
+++ b/佐田の作業用/shoin.html
@@ -14,7 +14,7 @@
     <main>
         <div class="schoolInformation">
             <h3>自分の所属していたクラス:特になし</h3>
-            <h3>その他の紹介：<br>通信交であり人があまりいなかった一人で対面授業の日もしばしばバイク乗ってくる人もいたテストの前にテストと同じ内容のプリントがもらえる</h3>
+            <h3>その他の紹介：<br>通信校であり人があまりいなかった一人で対面授業の日もしばしばバイク乗ってくる人もいたテストの前にテストと同じ内容のプリントがもらえる</h3>
         </div>
         <div>
             <h2>班員からのコメント</h2>
@@ -25,11 +25,12 @@
         </div>
     </main>
     <footer>
-        <h3>その他の団員一覧</h3>
-        <a href="#">佐田</a>
-        <a href="#">中村</a>
-        <a href="#">森</a>
-        <a href="#">可児</a>
+        <h3>その他の班員一覧</h3>
+        <div class = "links">
+            <a href="#">中村</a>
+            <a href="#">森</a>
+            <a href="#">可児</a>
+        </div>
     </footer>
 </body>
 </html>
