--- a/nakamura/tamanosyougyou.html
+++ b/nakamura/tamanosyougyou.html
@@ -18,14 +18,14 @@
     </header>
     <main>
         <div class="schoolInformation">
+            <h3>所属学科:機械科</h3>
             <h3>特徴:卒業後そのまま就職するものが多いため校則だけが厳しい。</h3>
-            <h3>機械科</h3>
             <h3>偏差値が低すぎて授業がなりたっていない、</h3>
         </div>
         <div>
             <h2>班員からのコメント</h2>
             <h3>佐田:</h3>
-            <h3>中村:</h3>
+            <h3>中村:授業中に口笛を吹いただけで怒られるらしいけど怖いなぁ</h3>
             <h3>森:</h3>
             <h3>可児:</h3>
             <script src="script.js"></script>
@@ -34,7 +34,7 @@
     <footer>
         <h3>その他の団員一覧</h3>
         <a href="#">佐田</a>
-        <a href="#">中村</a>
+        <a href="tamanosyougyou.html">中村</a>
         <a href="#">森</a>
         <a href="#">可児</a>
     </footer>
