学校名の追加

--- a/nakamura/tamanosyougyou.html
+++ b/nakamura/tamanosyougyou.html
@@ -26,7 +26,7 @@
             <h2>班員からのコメント</h2>
             <h3>佐田:</h3>
 
-            
+
 
             <h3>中村:授業中に口笛を吹いただけで怒られたらしいけど怖いなぁ</h3>
             
@@ -45,6 +45,6 @@
         <a href="shoin.html">佐田</a>
         <a href="tamanosyougyou.html">中村</a>
         <a href="asahijuku.html">森</a>
-        <a href="#">可児</a>
+        <a href="kuranisi.html">可児</a>
     </footer>
 </html>
