--- a/mori/asahijuku.html
+++ b/mori/asahijuku.html
@@ -21,7 +21,7 @@
         <div>
             <h2>班員からのコメント</h2>
             <h3>佐田:</h3>
-            <h3>中村:</h3>
+            <h3>中村:今ではリモート授業をしているらしい小学校なのにすごい</h3>
             <h3>森:楽しそう</h3>
             <h3>可児:</h3>
         </div>
