カウント機能の追加

--- a/mori/asahijuku.html
+++ b/mori/asahijuku.html
@@ -25,6 +25,12 @@
             <h3>森:楽しそう</h3>
             <h3>可児:</h3>
         </div>
+        <div>
+            <h2>カウントボタン</h2>
+            <button id="countButton">クリックしてカウント</button>
+            <button id="resetButton">リセット</button>
+            <p id="countDisplay">カウント: 0</p>
+        </div>
     </main>
     <footer>
         <h3>その他の団員一覧</h3>
