おみくじ機能の作成

--- a/junki/kuranisi.html
+++ b/junki/kuranisi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css"> <!-- スタイルシートへのリンク -->
-    <script src="script.js" defer></script> <!-- スクリプトファイルへのリンク -->
+    
 </head>
 <body>
     <header>
@@ -17,6 +17,10 @@
             <h3>自分の所属していたクラス:３－８</h3>
             <h3>その他の紹介<br>一年生の時に先生が現金の窃盗で逮捕されて、「盗んでないと思います」と容疑を否認した。</h3>
         </div>
+
+        <h1>❤おみくじコーナー❤</h1>
+            <button onclick="drawOmikuji()">おみくじを引く</button>
+            <p id="result"></p>
         <div>
             <h2>班員からのコメント</h2>
             <h3>佐田:</h3>
@@ -35,5 +39,6 @@
         <p class="copyright">&copy; Copyright 2024 kani</p>
         
     </footer>
+    <script src="script.js" defer></script> <!-- スクリプトファイルへのリンク -->
 </body>
 </html>
