他の班員のコメを書いてもろて

--- a/junki/kuranisi.html
+++ b/junki/kuranisi.html
@@ -24,9 +24,17 @@
         <div>
             <h2>班員からのコメント</h2>
             <h3>佐田:</h3>
+
+
             <h3>中村:</h3>
+
+
             <h3>森:</h3>
-            <h3>可児:</h3>
+
+
+            <h3>可児:現金窃盗とか確実に中学校で起きていいことではない★</h3>
+
+
         </div>
     </main>
     <footer>
