一言コメントの追加

--- a/junki/kuranisi.html
+++ b/junki/kuranisi.html
@@ -21,7 +21,7 @@
             <h2>班員からのコメント</h2>
             <h3>佐田:</h3>
             <h3>中村:木造建築がきれいな学校だね！</h3>
-            <h3>森:</h3>
+            <h3>森:とても楽しい学校ですｂ</h3>
             <h3>可児:</h3>
         </div>
     </main>
