--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="cs_s.css">
 </head>
 <body>
+    <header>
+        <div>
+            <h1 >学校紹介ホームページ</h1>
+        </div>
+        <nav>
+            <div class="navbar">
+                <a>中村</a>
+                <a>可児</a>
+                <a>森</a>
+                <a>佐田</a>
+        </nav>
+    </header>
     <main>
         <div class="schools">
             <div class="school">
