ボタン作成

--- a/佐田の作業用/shoin.html
+++ b/佐田の作業用/shoin.html
@@ -16,6 +16,10 @@
             <h3>自分の所属していたクラス:特になし</h3>
             <h3>その他の紹介：<br>通信校であり人があまりいなかった一人で対面授業の日もしばしばバイク乗ってくる人もいたテストの前にテストと同じ内容のプリントがもらえる</h3>
         </div>
+        <div class="counter-container">
+            <div>クリック回数: <span id="click-count">0</span></div>
+            <button class="counter-button" id="click-button">クリックしてね</button>
+        </div>
         <div>
             <h2>班員からのコメント</h2>
             <h3>佐田:</h3>
@@ -32,5 +36,13 @@
             <a href="#">可児</a>
         </div>
     </footer>
+    <script>
+        let count = 0;
+
+        document.getElementById('click-button').addEventListener('click', function() {
+            count++;
+            document.getElementById('click-count').textContent = count;
+        });
+    </script>
 </body>
 </html>
