--- a/佐田の作業用/shoin.html
+++ b/佐田の作業用/shoin.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/styles.css"> <!-- スタイルシートへのリンク -->
-    <script src="script.js" defer></script> <!-- スクリプトファイルへのリンク -->
 </head>
 <body>
     <header>
@@ -19,6 +18,7 @@
         <div class="counter-container">
             <div>クリック回数: <span id="click-count">0</span></div>
             <button class="counter-button" id="click-button">クリックしてね</button>
+            <button class="reset-button" id="reset-buton">リセット!!</button>
         </div>
         <div>
             <h2>班員からのコメント</h2>
@@ -41,6 +41,10 @@
 
         document.getElementById('click-button').addEventListener('click', function() {
             count++;
+            document.getElementById('click-count').textContent = count;
+        });
+        document.getElementById('reset-buton').addEventListener('click', function() {
+            count = 0;
             document.getElementById('click-count').textContent = count;
         });
     </script>
