色々コミット

--- a/junki/kuranisi.html
+++ b/junki/kuranisi.html
@@ -23,7 +23,7 @@
             <p id="result"></p>
         <div>
             <h2>班員からのコメント</h2>
-            <h3>佐田:</h3>
+            <h3>佐田:いい雰囲気だと思った</h3>
             <h3>中村:木造建築がきれいな学校だね！</h3>
             <h3>森:とても楽しい高校ですｂ</h3>
             <h3>可児:現金窃盗とか確実に中学校で起きていいことではない★</h3>
