--- a/nakamura/tamanosyougyou.html
+++ b/nakamura/tamanosyougyou.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <h2>班員からのコメント</h2>
-            <h3>佐田:</h3>
+            <h3>佐田:<br>結構でかいと思った。あと、高速厳しいのはすごい</h3>
 
 
 
