--- a/mori/asahijuku.html
+++ b/mori/asahijuku.html
@@ -34,7 +34,7 @@
     </main>
     <footer>
         <h3>その他の団員一覧</h3>
-        <a href="#">佐田</a>
+        <a href="asahijuku.html">佐田</a>
         <a href="#">中村</a>
         <a href="#">森</a>
         <a href="#">可児</a>
