可児班員コメ

--- a/佐田の作業用/shoin.html
+++ b/佐田の作業用/shoin.html
@@ -21,7 +21,7 @@
             <h3>佐田:</h3>
             <h3>中村:私の母校楽しかったけどあんまり登校できてないや</h3>
             <h3>森:</h3>
-            <h3>可児:</h3>
+            <h3>可児:通信校も楽しそう。</h3>
         </div>
     </main>
     <footer>
