--- a/junki/kuranisi.html
+++ b/junki/kuranisi.html
@@ -31,10 +31,10 @@
     </main>
     <footer>
         <h3>その他の団員一覧</h3>
-        <a href="#">佐田</a>
-        <a href="#">中村</a>
-        <a href="#">森</a>
-        <a href="#">可児</a>
+        <a href="../佐田の作業用/shoin.html">佐田</a>
+        <a href="../nakamura/tamanosyougyou.html">中村</a>
+        <a href="../mori/asahijuku.html">森</a>
+        <a href="../junki/kuranisi.html">可児</a>
         
         <p class="copyright">&copy; Copyright 2024 kani</p>
         
