ホームページに追加

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -41,7 +41,11 @@
     </div>
     </main>
     <footer>
-        <p>&copy; 2024 あなたの名前または会社名</p>
+        <p>&copy; 2024 岡山情報ビジネス学院</p>
+        <div style="text-align: center">
+            <img src="./img/oic_school.jpg" alt="OIC School">
+        </div>
+        専門学校 岡山情報ビジネス学院（OIC）はJR岡山駅から徒歩2分、高い資格取得実績と就職実績を誇る総合専門学校です。
     </footer>
     <script src="script.js"></script>
 </body>
