--- a/homepage/index.html
+++ b/homepage/index.html
@@ -13,10 +13,10 @@
         </div>
         <nav>
             <div class="navbar">
-                <a>中村</a>
-                <a>可児</a>
-                <a>森</a>
-                <a>佐田</a>
+                <a href="./">中村</a>
+                <a href="./">可児</a>
+                <a href="./">森</a>
+                <a href="./">佐田</a>
         </nav>
     </header>
     <main>
