--- a/nakamura/tamanosyougyou.html
+++ b/nakamura/tamanosyougyou.html
@@ -33,9 +33,9 @@
     </main>
     <footer>
         <h3>その他の団員一覧</h3>
-        <a href="shoin.html">佐田</a>
-        <a href="tamanosyougyou.html">中村</a>
-        <a href="asahijuku.html">森</a>
-        <a href="kuranisi.html">可児</a>
+        <a href="./佐田の作業用/shoin.html">佐田</a>
+        <a href="./nakamura/tamanosyougyou.html">中村</a>
+        <a href="./mori/asahijuku.html">森</a>
+        <a href="./junki/kuranisi.html">可児</a>
     </footer>
 </html>
