--- a/homepage/index.html
+++ b/homepage/index.html
@@ -15,7 +15,7 @@
             <div class="navbar">
                 <a href="../nakamura/tamanosyougyou.html">中村</a>
                 <a href="../junki/kuranisi.html">可児</a>
-                <a href="../mori/asahijiuku.html">森</a>
+                <a href="../mori/asahijuku.html">森</a>
                 <a href="../佐田の作業用/shoin.html">佐田</a>
         </nav>
     </header>
