--- a/mori/asahijuku.html
+++ b/mori/asahijuku.html
@@ -35,9 +35,9 @@
     <footer>
         <h3>その他の団員一覧</h3>
         <a href="../佐田の作業用/shoin.html">佐田</a>
-        <a href="#">中村</a>
-        <a href="#">森</a>
-        <a href="#">可児</a>
+        <a href="../nakamura/tamanosyougyou.html">中村</a>
+        <a href="../mori/asahijuku.html">森</a>
+        <a href="../junki/kuranisi.html">可児</a>
     </footer>
 </body>
 </html>
