--- a/佐田の作業用/shoin.html
+++ b/佐田の作業用/shoin.html
@@ -30,10 +30,11 @@
     </main>
     <footer>
         <h3>その他の班員一覧</h3>
+    </footer>
         <div class = "links">
-            <a href="#">中村</a>
-            <a href="#">森</a>
-            <a href="#">可児</a>
+            <a href="../nakamura/tamanosyougyou.html">中村</a>
+            <a href="../mori/asahijuku.html">森</a>
+            <a href="../junki/kuranisi.html">可児</a>
         </div>
     </footer>
     <script>
